Change greeting from 'Hello World' to 'Goodbye World'

--- a/menu.html
+++ b/menu.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Menu - L'Asuncion Hotel</title>
+
+   <!-- TAB LOGO / FAVICON -->
+  <link rel="icon" type="image/png" href="logo (2).jpg">
+  
   <link rel="stylesheet" href="menu.css" />
 </head>
 <body>
@@ -780,3 +784,4 @@
   <script src="lasuncion.js"></script>
 </body>
 </html>
+
