Update print statement from 'Hello' to 'Goodbye'

--- a/menu.html
+++ b/menu.html
@@ -90,7 +90,7 @@
           </div>
         </li>
         <li class="menu-item">
-          <img src="images/tower-of-squids.jpg" alt="Tower of Squids">
+          <img src="TowerSquid.jpg" alt="Tower of Squids">
           <div class="item-text">
             <span class="dish">Tower of Squids</span>
             <span class="price">₱340</span>
@@ -784,4 +784,5 @@
   <script src="lasuncion.js"></script>
 </body>
 </html>
+
 
