--- a/menu.html
+++ b/menu.html
@@ -366,7 +366,7 @@
       </div>
     </li>
     <li class="menu-item">
-      <img src="images/bistek-tagalog.jpg" alt="Bistek Tagalog">
+      <img src="Bestik.jpg" alt="Bistek Tagalog">
       <div class="item-text">
         <span class="dish">Bistek Tagalog</span>
         <span class="price">₱460</span>
@@ -784,6 +784,7 @@
   <script src="lasuncion.js"></script>
 </body>
 </html>
+
 
 
 
