--- a/menu.html
+++ b/menu.html
@@ -447,7 +447,7 @@
       </div>
     </li>
     <li class="menu-item">
-      <img src="images/crispy-pata.jpg" alt="Crispy Pata">
+      <img src="Pata.jpg" alt="Crispy Pata">
       <div class="item-text">
         <span class="dish">Crispy Pata</span>
         <span class="price">₱800</span>
@@ -784,6 +784,7 @@
   <script src="lasuncion.js"></script>
 </body>
 </html>
+
 
 
 
